--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <a class="social-icon-col" title="Calendly" href="https://calendly.com/surabhi/30min" target="_blank" rel="noopener noreferrer"><img src="assets/img/calendly_col.png" alt="Calendly" width="24" height="24" ></a>
                                     <a class="social-icon-col" title="Gmail" href="mailto:s279497@usc.edu" target="_blank" rel="noopener noreferrer"><img src="assets/img/gmail_col.png" alt="Gmail" width="24" height="24" ></a>
                                     <a class="social-icon-col" title="LinkedIn" href="https://www.linkedin.com/in/surabhi4623" target="_blank" rel="noopener noreferrer"><img src="assets/img/LI_col.png" alt="LinkedIn" width="24" height="24" ></a>
-                                    <a class="social-icon-col" title="GitHub" href="https://github.com/surabhi-4623" target="_blank" rel="noopener noreferrer"><img src="assets/img/gitHub.png" alt="GitHub" width="24" height="24" style=></a>                        
+                                    <a class="social-icon-col" title="GitHub" href="https://github.com/surabhi-4623" target="_blank" rel="noopener noreferrer"><img src="assets/img/github.png" alt="GitHub" width="24" height="24" style=></a>                        
                                     <a class="social-icon-col" title="LeetCode" href="https://leetcode.com/surabhi_4623/" target="_blank" rel="noopener noreferrer"><img src="assets/img/Leetcode.png" alt="LeetCode" width="24" height="24" ></a>
                                     <!-- Add more social icons as needed -->
                                 </div>                  
