--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                     
                     <div class="social-icon-col1" title="GitHub">
                         <a href="https://github.com/surabhi-4623" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/gitHub.png" alt="GitHub" width="24" height="24" />
+                            <img src="assets/img/github.png" alt="GitHub" width="24" height="24" />
                             <span>Have a peek at my GitHub</span>
                         </a>
                     </div>
